--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,6 +7,7 @@ const allPosts = await Astro.glob('../posts/*.md')
 ---
 <Layout title="Blog">
   <section class="posts">
+    {allPosts}
     {
       allPosts.map((post) => {
         <div class="post">
