--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -12,7 +12,7 @@
     height: fit-content;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(316.6px, 316.6px));
+    grid-template-columns: repeat(6, minmax(316.6px, 316.6px));
     gap: var(--gap);
 
     &:not(#videos) {
@@ -20,10 +20,22 @@
     }
 
     @media (max-width: 1016px) and (min-width: 509px) {
-        grid-template-columns: repeat(2, minmax(316.6px, 1fr));
+        grid-template-columns: repeat(3, minmax(316.6px, 1fr));
     }
     @media (max-width: 508px) {
-        grid-template-columns: repeat(1, minmax(316.6px, 1fr));
+        grid-template-columns: repeat(2, minmax(316.6px, 1fr));
+    }
+}
+
+.grid .item {
+    &:nth-child(3n-2) {
+        grid-column: 1 / 3;
+    }
+    &:nth-child(3n-1) {
+        grid-column: 3 / -3;
+    }
+    &:nth-child(3n-0) {
+        grid-column: -3 / -1;
     }
 }
 
