--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -46,7 +46,7 @@
 
     cursor: pointer;
 
-    grid-column: span 2;
+    // grid-column: span 2;
     // &:not(:has( + &)) {
         // grid-coulumn: ;
     // }
