--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -28,17 +28,17 @@
     }
 }
 
-// .grid .item {
-//     &:nth-child(3n-2) {
-//         grid-column: 1 / 3;
-//     }
-//     &:nth-child(3n-1) {
-//         grid-column: 3 / -3;
-//     }
-//     &:nth-child(3n-0) {
-//         grid-column: -3 / -1;
-//     }
-// }
+.grid .item {
+    &:nth-child(3n-2) {
+        grid-column: 1 / 3;
+    }
+    // &:nth-child(3n-1) {
+        // grid-column: 3 / -3;
+    // }
+    // &:nth-child(3n-0) {
+        // grid-column: -3 / -1;
+    // }
+}
 
 .grid .item {
     // height: fit-content;
