--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -29,9 +29,9 @@
 }
 
 .grid .item {
-    &:nth-child(3n-2) {
-        grid-column: 1 / 3;
-    }
+    // &:nth-child(3n-2) {
+        // grid-column: 1 / 3;
+    // }
     // &:nth-child(3n-1) {
         // grid-column: 3 / -3;
     // }
