--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -28,7 +28,7 @@
     }
 }
 
-.grid .item {
+// .grid .item {
     // &:nth-child(3n-2) {
         // grid-column: 1 / 3;
     // }
@@ -38,7 +38,7 @@
     // &:nth-child(3n-0) {
         // grid-column: -3 / -1;
     // }
-}
+// }
 
 .grid .item {
     // height: fit-content;
