--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -35,10 +35,10 @@
 
 .grid .item {
     &:not(:has( + .item)) {
-        grid-column: span var(--span*3);
+        grid-column: span calc(var(--span)*3);
     }
     &:not(:has( + .item + .item)) {
-        grid-column: span calc(--span*2);
+        grid-column: span calc(var(--span)*2);
     }
 }
 
