--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -26,7 +26,7 @@ var items = [
       {
         items.map(item => {
           <div class="item">
-            <a href={item.link.url} target={items.link.target} class="image-link" />
+            <a href={item.link.url} target={item.link.target} class="image-link" />
             <div>
               <a href={items.link.url} target={item.link.target} >
                 <h3>Graphics for Good</h3>
