--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -28,7 +28,7 @@ var items = [
           <div class="item">
             <a href={item.link.url} target={item.link.target} class="image-link" />
             <div>
-              <a href={items.link.url} target={item.link.target} >
+              <a href={item.link.url} target={item.link.target} >
                 <h3>Graphics for Good</h3>
               </a>
               <div class="description">
