--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -24,7 +24,7 @@ var items = [
   <SiteGridContent>
     <section class="grid portfolio">
       {
-        items.map(item => {
+        items.map((item) => {
           <div class="item">
             <a href={item.link.url} target={item.link.target} class="image-link" />
             <div>
