--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -14,9 +14,9 @@ var items = [
     }, 
     description: 'I helped develop and am the Lead Website Designer and Manager for the Graphics for Good Club at my school.', 
   }, 
-  {
-    name: '', 
-  }, 
+  // {
+  //   name: '', 
+  // }, 
 ]
 
 ---
