--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -24,9 +24,9 @@ var itemsHTML = ''
 items.forEach(function(item, i) {
   itemsHTML += `
     <div class="item">
-      <a href="${item.link.url}" target="${item.link.target}" class="image-link" />
+      <a href="${item.link.url}" target="${item.link.target}" class="image-link"></a>
       <div>
-        <a href="${item.link.url}" target="${item.link.target}" >
+        <a href="${item.link.url}" target="${item.link.target}">
           <h3>${item.name}</h3>
         </a>
         <div class="description">
