--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -52,7 +52,7 @@
             grid-column: calc(1*var(--outside) - var(--span)*2) / calc(1*var(--inside));
         }
         & + .item {
-            grid-column: calc(-1*var(--inside)) / calc(-1*var(--outside) + var(--span))*2;
+            grid-column: calc(-1*var(--inside)) / calc(-1*var(--outside) + var(--span)*2);
         }
     }
 }
