--- a/src/components/SiteGridContent.astro
+++ b/src/components/SiteGridContent.astro
@@ -9,5 +9,16 @@ import Layout from '../layouts/Layout.astro'
         document.querySelectorAll('.site-grid .grid .item .image-link').forEach(function(a, i) {
             a.style.backgroundImage = `url('https://image.thum.io/get/maxAge/12/width/${a.clientWidth*2}/${a.href}')`
         })
+        document.querySelectorAll('.site-grid .grid').forEach(function(g, i) {
+            var eles = g.document.querySelectorAll('.item')
+            var amt = eles.length
+            if (amt === 1 || amt%3 === 1) {
+                eles[0].classList.add('center')
+            }
+            else if (amt === 2 || amt%3 === 2) {
+                eles[0].classList.add('left')
+                eles[2].classList.add('right')
+            }
+        })
     </script>
 </section>
