--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -149,9 +149,9 @@
             border-bottom: solid 1px var(--foreground-tertiary-color);
         }
 
-        & div {
-            gap: calc(var(--gap)/2);
-        }
+        // & div {
+        //     gap: calc(var(--gap)/2);
+        // }
         & .description {
             grid-template-rows: 1fr;
         }
