--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -112,8 +112,8 @@
             }
         }
 
-        display: flex;
-        flex-direction: column;
+        // display: flex;
+        // flex-direction: column;
     }
 
     & :is(h1, h2, h3, h4, h5, h6) {
@@ -149,9 +149,6 @@
             border-bottom: solid 1px var(--foreground-tertiary-color);
         }
 
-        // & div {
-        //     gap: calc(var(--gap)/2);
-        // }
         & .description {
             grid-template-rows: 1fr;
         }
