--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -109,11 +109,15 @@
                 box-sizing: border-box;
                 padding: calc(var(--gap)/var(--val));
                 gap: 0;
+                
+                &a > * {
+                    margin: 0;
+                }
             }
         }
 
-        // display: flex;
-        // flex-direction: column;
+        display: flex;
+        flex-direction: column;
     }
 
     & :is(h1, h2, h3, h4, h5, h6) {
