--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -91,6 +91,7 @@
     }
 
     & > div {
+        height: fit-content;
         &:not([paddingOnHover]) {
             > * {
                 --val: 2;
