--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -145,10 +145,9 @@
         & .description {
             grid-template-rows: 1fr;
         }
-        & span {
-            height: auto;
-            visibility: unset;
-            margin-block: 0.5em;
+        :not(&) span {
+            visibility: hidden;
+            // margin-block: 0.5em;
         }
     }
 }
