--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -110,7 +110,7 @@
     }
 
     & :is(h1, h2, h3, h4, h5, h6) {
-        margin-block: 0;
+        margin-block: 0.5em;
     }
     
     & :is(h1, h2, h3, h4, h5, h6), & span {
