--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -101,9 +101,9 @@
             }
             > a {
                 padding: var(--pad);
-                > * {
-                    // margin: 0;
-                }
+                // > * {
+                //     margin: 0;
+                // }
             }
         }
 
