--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -43,7 +43,8 @@ main {
     max-width: 100%;
     min-height: 100%;
 
-    display: flex;
+    display: grid;
+    gap: 0;
 
     hr {
         margin-inline: auto;
@@ -58,7 +59,7 @@ main {
 
 .main-content {
     flex: 1;
-    
+
     box-sizing: border-box;
     max-width: 100%;
     &:not(.ignorePadding) {
