--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -32,6 +32,8 @@ import Layout from '../layouts/Layout.astro'
     ) ans = currentDate.year - dob.year - 1
     else ans = currentDate.year - dob.year
 
+    alert(currentDate.year)
+
     document.getElementById('age').innerHTML = ans
   </script>
 </Layout>
