--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ import Layout from '../layouts/Layout.astro'
     var date = new Date()
     var currentDate = {
       month: date.getMonth(), 
-      day: date.getgetData(), 
+      day: date.getDate(), 
       year: date.getFullYear(), 
     }
 
