--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,8 +5,8 @@ import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="About">
   <div class="about">
-    Hello, my name is Adarsh Kumar or RockGamerAK. I'm&nbsp;<span id="age"></span> years old, and a High School Student. <br>
-    I am good with software, so if you need tech help, DM @w.web.wizards or email <a href="mailto:ww@RockGamerAK.com">ww@RockGamerAK.com</a>. I also enjoy history and geography.
+    <p>Hello, my name is Adarsh Kumar or RockGamerAK. I'm&nbsp;<span id="age"></span> years old, and a High School Student.</p>
+    <p>I am good with software, so if you need tech help, DM @w.web.wizards or email <a href="mailto:ww@RockGamerAK.com">ww@RockGamerAK.com</a>. I also enjoy history and geography.</p>
   </div>
   <script>
     var dob = {
