--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -1,7 +1,8 @@
 .about {
+    margin-inline: auto;
     width: min(90%, 1000px);
 
-    &, & > * {
-        margin-inline: auto;
+    > p {
+        width: 100%;
     }
 }
