--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -37,12 +37,16 @@ body {
 // }
 
 /* Styles for below the nav bar */
-main {
-    flex: 1;
-    width: 100%;
-    max-width: 100%;
-    min-height: 100%;
 
+.wrapper {
+    flex: 1;
+
+    width: 100%;
+
+    display: grid;
+}
+
+main {
     display: grid;
     gap: 0;
 
