--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -85,9 +85,13 @@ hr[isDivider] {
   
 h1.page-title {
     margin: 0;
+    padding-block: 1.26375rem;
+
+    height: fit-content;
+
     border-bottom: 0.09375rem solid var(--background-secondary-color);
     border-radius: 0.5rem;
-    padding-block: 1.26375rem;
+
     text-align: center;
 }
 
