--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,7 +42,7 @@ if (className.startsWith(' ')) className = className.substring(1)
   <body>
     <Header logo={logoSRC} />
     <div class="wrapper">
-      <main id="content" align="center">
+      <main id="content">
         <h1 class="page-title">{pTitle}</h1>
         <div class={className} style={inlineStyles}>
           <slot />
