--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -1,6 +1,6 @@
-// .wrapper {
-//     grid-template-columns: 1fr 12rem;
-// }
+.wrapper {
+    grid-template-columns: 1fr 12rem;
+}
 
 .main-sidebar {
     float: right;
