--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -51,7 +51,9 @@ body {
 }
 
 main {
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    
     gap: 0;
 
     max-width: 100%;
