--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -1,9 +1,12 @@
 .about {
     --pad: 1rem;
+
+    margin-inline: auto;
     padding-inline: var(--pad);
+
     width: min(calc(90% - var(--pad)), 1000px);
 
-    &, & > * {
-        margin-inline: auto;
+    & > p {
+        max-width: 100%;
     }
 }
