update ['about', 'contact']'.astro', '[about, contact].scss'

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,8 +1,10 @@
 ---
+import '../styles/pages/[about, contact].scss'
+
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="Contact">
-  <form action="https://getform.io/f/21a3ba30-b0e7-4e10-a5bf-6635fc7ba92f" method="POST">
+  <form action="https://getform.io/f/21a3ba30-b0e7-4e10-a5bf-6635fc7ba92f" method="POST" class="contact">
     <fieldset>
       <legend align="center">Contact Me</legend>
       <p>
