--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/pages/about.scss'
+import '../styles/pages/[about, contact].scss'
 
 import Layout from '../layouts/Layout.astro'
 ---
