--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -1,10 +1,11 @@
 .about, .contact {
     --pad: 1rem;
+    --max: 1000px;
 
     margin-inline: auto;
     padding-inline: var(--pad);
 
-    width: min(calc(90% - var(--pad)), 1000px);
+    width: min(calc(90% - var(--pad)), var(--max));
 
     & > p {
         max-width: 100%;
@@ -12,5 +13,6 @@
 }
 
 .contact {
+    --max: 500px;
     margin-block: 0;
 }
