--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -21,5 +21,10 @@
     padding: 1rem;
 
     background-color: var(--foreground-secondary-color);
-    color: var(--background-secondary-color)
+    color: var(--background-secondary-color);
+}
+
+.contact * {
+    color: inherit;
+    background-color: inherit;
 }
