--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -20,6 +20,8 @@
 
     padding: 1rem;
 
+    border-radius: 100vw;
+
     &, & input {
         background-color: var(--foreground-secondary-color);
         color: var(--background-secondary-color);
