--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,7 @@ import Header from '../components/header.astro'
 import Sidebar from '../components/sidebar.astro'
 
 var sName = 'Adarsh Kumar'
+var sURL = 'https://AdarshRKumar.dev'
 var logoSRC = '/logo.jpg'
 
 var { title, pTitle, classItems, inlineStyles } = Astro.props;
@@ -34,7 +35,7 @@ if (className.startsWith(' ')) className = className.substring(1)
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{title}</title>
-    <base href="https://AdarshRKumar.com" />
+    <base href={sURL} />
     <link rel="icon" href="/favicon.png">
     <link href="https://firecss.hecker40.repl.co/fire.css" rel="stylesheet" type="text/css"/>
     <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
