--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -10,8 +10,8 @@
     & > p {
         max-width: 100%;
         color: var(--foreground-secondary-color);
-        // font-size: 12pt;
-        // line-height: 22.5px;
+        font-size: 12pt;
+        line-height: 22.5px;
     }
 }
 
