--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,6 +15,10 @@
     color: white;
 }
 
+:has(:target), html {
+    scroll-behavior: smooth;
+}
+
 html, iframe {
     margin: 0;
     padding: 0;
